# legal_email_converter

./: .gitignore  COORDINATION_POLICY.md  DAG_MCP_AGENTS.md  LARGE_PDF_UX_ACCEPTANCE.md  Makefile  PDF_INGEST_UX_SPEC.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO_MCP.md  UNIFIED_IMPORT_ACCEPTANCE.md  UX_ACCEPTANCE.md  pyproject.toml  requirements.txt  research.yaml  skill_eval_cases.yaml  skill_prd.yaml
config/: config.py
proposals/: research-before-implementation-skill-proposal.md
scripts/: 0_extract_archives.py  1_create_mbox.py  2_create_pdf_mbox.py  3_generate_reports.py  4_filter_emails.py  5_export_mbox_for_llm.py  eval_skill_cases.py  fetch_hard_pdf_fixtures.py  generate_complete_inventory.py  run_all.py  run_pdf_integration_matrix.py  run_unified_export_e2e.py
skills/legal-case-export/: SKILL.md
skills/legal-case-export/agents/: openai.yaml
skills/legal-case-export/references/: pdf-ingest.md  unified-export.md  workflows.md
src/legal_email_converter/: __init__.py  cli.py  contracts.py  export_mbox_for_llm.py  export_service.py  ollama_client.py  pdf_ingest.py  unified_export.py
tests/: hard_pdf_sources.tsv  integration_pdf_matrix.example.yaml  test_cli.py  test_export_mbox_for_llm.py  test_ollama_client.py  test_pdf_ingest.py  test_unified_export.py  test_unified_import_acceptance.py
